--- a/tugas1.html
+++ b/tugas1.html
@@ -92,8 +92,17 @@
                  font-weight:bold; 
                  padding: 30px;">
         251402141_Jelita Hati Sinurat_Teknologi Informasi B
+          <br><br>
+    <a href="https://elittaaasnrt-creator.github.io/tugas2.html/tugas2" 
+       style="color: #ffb6c1; 
+              text-decoration: none; 
+              font-size:55px; 
+              font-weight: normal;">
+      👉 Klik di sini untuk buka Tugas 2
+    </a>
       </td>
     </tr>
   </table>
 
 </body>
+
